<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.norm4j</groupId>
  <artifactId>norm4j-test</artifactId>
  <version>1.1.3</version>
  <packaging>jar</packaging>

  <name>${project.groupId}:${project.artifactId}</name>

  <description>
      norm4j (Not an ORM for Java) is a lightweight, SQL-centric alternative to JPA
  </description>

  <url>https://www.norm4j.org</url>

  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

 <developers>
    <developer>
      <name>April Software</name>
      <email>norm4j@aprilsoftware.com</email>
      <organization>April Software</organization>
      <organizationUrl>https://www.aprilsoftware.com</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git://github.com/aprilsoftware/norm4j.git</connection>
    <developerConnection>scm:git:ssh://aprilsoftware/norm4j.git</developerConnection>
    <url>https://github.com/aprilsoftware/norm4j/tree/main</url>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>
    <junit.jupiter.version>5.12.1</junit.jupiter.version>
  </properties>

  <dependencies>
  
    <dependency>
        <groupId>org.norm4j</groupId>
        <artifactId>norm4j-core</artifactId>
        <version>1.1.3</version>
        <scope>test</scope>
    </dependency>
  
    <dependency>
        <groupId>org.norm4j</groupId>
        <artifactId>norm4j-postgresql</artifactId>
        <version>1.1.3</version>
        <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.7.5</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
        <groupId>org.norm4j</groupId>
        <artifactId>norm4j-mariadb</artifactId>
        <version>1.1.3</version>
        <scope>test</scope>
    </dependency>

    <dependency>
        <groupId>org.mariadb.jdbc</groupId>
        <artifactId>mariadb-java-client</artifactId>
        <version>3.5.2</version>
        <scope>test</scope>
    </dependency>
    
    <dependency>
        <groupId>org.norm4j</groupId>
        <artifactId>norm4j-sqlserver</artifactId>
        <version>1.1.3</version>
        <scope>test</scope>
    </dependency>

    <dependency>
        <groupId>com.microsoft.sqlserver</groupId>
        <artifactId>mssql-jdbc</artifactId>
        <version>12.10.0.jre11</version>
        <scope>test</scope>
    </dependency>

    <dependency>
        <groupId>org.norm4j</groupId>
        <artifactId>norm4j-oracle</artifactId>
        <version>1.1.3</version>
        <scope>test</scope>
    </dependency>

    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.12.1</version>
        <scope>test</scope>
    </dependency>

    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.12.1</version>
        <scope>test</scope>
    </dependency>

    <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-dbcp2</artifactId>
        <version>2.13.0</version>
        <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.1.2</version>
            <configuration>
                <useModulePath>false</useModulePath>
            </configuration>
        </plugin>

    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.4.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.3</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.4</version>
        </plugin>
      </plugins>
    </pluginManagement>

  </build>
</project>
